--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.10"
 aiogram = "^3.10.0"
 environs = "^11.0.0"
+pydantic-settings = "^2.5.2"
+redis = "^5.0.8"
 
 
 [tool.poetry.group.dev.dependencies]
